--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ button:focus-visible {
   margin-top: 11vh;
   padding-bottom: 50px;
   animation: fadeIn 1s; 
+  z-index: 1;
 }
 
 .home{
